--- a/app/css/header.css
+++ b/app/css/header.css
@@ -1,10 +1,141 @@
+.main-nav__item, .main-nav__link, .main-nav__bar, .soc-panel__item, .toggle-search, .toggle-search__bar {
+  -webkit-transition: all .25s ease;
+  transition: all .25s ease; }
+
+.main-nav, .main-nav__link {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex; }
+
+.main-nav, .main-nav__link {
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center; }
+
+.main-nav, .main-nav__link {
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center; }
+
+.soc-panel {
+  list-style-type: none;
+  padding: 0;
+  margin: 0; }
+
+.main-nav {
+  padding: 0;
+  margin: 0;
+  list-style-type: none; }
+  .main-nav li {
+    padding: 0; }
+  .main-nav a:hover {
+    text-decoration: none; }
+
 body {
-  font-size: 16px;
-  min-width: 320px;
   position: relative;
+  min-width: 320px;
+  font-size: 18px;
   line-height: 1.6;
-  font-family: "RobotoRegular", sans-serif;
+  font-family: "RobotoMedium", sans-serif;
+  background-color: #f5f5f5;
   overflow-x: hidden; }
+
+a {
+  color: #333; }
+  a:hover, a:active, a:focus, a:active:focus {
+    color: #333;
+    text-decoration: none; }
+
+img {
+  max-width: 100%; }
 
 .hidden {
   display: none; }
+
+.main-header {
+  position: relative;
+  height: 80px;
+  background-color: #fff; }
+
+.main-logo {
+  display: block;
+  height: 80px;
+  line-height: 80px;
+  padding-left: 20px; }
+
+.main-nav {
+  height: 80px; }
+  .main-nav__item {
+    position: relative;
+    -webkit-flex-basis: 240px;
+    -ms-flex-preferred-size: 240px;
+    flex-basis: 240px;
+    height: 100%;
+    margin: 0 2px;
+    z-index: 5; }
+    .main-nav__item:hover .main-nav__link {
+      color: #fff; }
+    .main-nav__item:hover .main-nav__bar {
+      height: 100%; }
+  .main-nav__link {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    font-size: 0.88889em;
+    text-align: center;
+    text-transform: uppercase; }
+  .main-nav__bar {
+    content: '';
+    position: absolute;
+    display: block;
+    bottom: 0;
+    width: 100%;
+    height: 7px;
+    z-index: -1; }
+    .main-nav__bar_marketing {
+      background-color: #f94f40; }
+    .main-nav__bar_effect {
+      background-color: #28dfbf; }
+    .main-nav__bar_books {
+      background-color: #a666cb; }
+
+.soc-panel {
+  position: relative;
+  padding: 20px 65px 0 0;
+  text-align: right; }
+  .soc-panel__item {
+    display: inline-block;
+    margin-right: 10px;
+    font-size: 25px; }
+    .soc-panel__item:hover {
+      opacity: .8; }
+    .soc-panel__item .fa-telegram {
+      margin-left: -4px; }
+
+.toggle-search {
+  position: absolute;
+  width: 80px;
+  height: 80px;
+  right: 0;
+  top: 0;
+  line-height: 76px;
+  text-align: center;
+  cursor: pointer;
+  z-index: 2; }
+  .toggle-search.active, .toggle-search:hover {
+    color: #fff; }
+    .toggle-search.active .toggle-search__bar, .toggle-search:hover .toggle-search__bar {
+      height: 100%; }
+  .toggle-search__bar {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 7px;
+    background-color: #333;
+    z-index: -1; }
+  .toggle-search .fa {
+    font-size: 25px; }
