--- a/sass/_vars.sass
+++ b/sass/_vars.sass
@@ -1,1 +1,10 @@
-$em-base: 16px
+$em-base: 18px
+
+// Colors
+$main-bg: #f5f5f5
+$block-bg: #fff
+$text-color: #333
+$grey: #aaacb2
+$marketing: #f94f40
+$effect: #28dfbf
+$books: #a666cb
