--- a/sass/fonts.sass
+++ b/sass/fonts.sass
@@ -1,3 +1,6 @@
 @import bourbon
 
 +font-face("RobotoRegular", "../fonts/RobotoRegular/RobotoRegular", $file-formats: eot woff ttf)
++font-face("RobotoMedium", "../fonts/RobotoMedium/RobotoMedium", $file-formats: eot ttf)
++font-face("RobotoLight", "../fonts/RobotoLight/RobotoLight", $file-formats: eot woff ttf)
++font-face("icon", "../fonts/icon/font/icon", $file-formats: eot woff woff2 ttf svg)
