--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,5 +1,8 @@
 @import bourbon
-@import vars.sass
+@import vars
+@import icon
+@import placeholders
+@import mixins
 
 *::-webkit-input-placeholder
 	color: #666
@@ -24,11 +27,153 @@ body input:required:valid,
 body textarea:required:valid
 	color: #666
 
-//Custom Styles Here
+input
+	outline: none
+
+// Mobile main menu
+.main-nav-wrapp
+	@extend %main-transition
+.toggle-mnu
+	@extend %flex-box
+	@extend %valign-center
+	@extend %justify-center
+	position: absolute
+	right: 0
+	width: 80px
+	height: 80px
+	padding-left: 2px
+	text-align: center
+	background-color: #fff
+	@extend %main-transition
+	&.active
+		right: 274px
+		.mobile-mnu
+			transform: rotate(45deg)
+			background-color: #fff
+			&:after
+				transform: rotate(90deg)
+				bottom: 0px
+				background-color: #fff
+			&:before
+				transform: rotate(-180deg)
+				top: 0px
+				background-color: #fff
+		.toggle-mnu__bar
+			width: 100%
+	&__bar
+		position: absolute
+		left: 0
+		top: 0
+		height: 100%
+		width: 7px
+		background-color: #333
+		z-index: 0
+		@extend %main-transition
+.mobile-mnu
+	position: relative
+	display: inline-block
+	width: 40px
+	height: 3px
+	background-color: #333
+	@extend %main-transition
+	z-index: 2
+	&:before,
+	&:after
+		content: ''
+		display: block
+		position: absolute
+		width: 100%
+		height: 3px
+		background-color: #333
+		@extend %main-transition
+	&:before
+		top: -10px
+	&:after
+		bottom: -10px
+
+// Search panel
+.search-wrapp
+	display: none
+	background-color: #333
+.search-panel
+	@extend %flex-box
+	@extend %valign-center
+	@extend %justify-center
+	height: 270px
+	color: $grey
+	.fa-close
+		position: absolute
+		top: 30px
+		right: 25px
+		@extend %main-transition
+		&:hover
+			color: #fff
+.search-form
+	position: relative
+	min-width: 1065px
+	padding-right: 25px
+	&__input
+		width: 100%
+		padding: 5px 15px
+		font-family: 'RobotoLight', sans-serif
+		font-size: 25px
+		background-color: transparent
+		border: none
+		border-bottom: 1px solid $grey
+	&__submit
+		display: none
+	.fa-search
+		position: absolute
+		right: 10px
+		top: 12px
+		font-size: 25px
+		cursor: pointer
+		@extend %main-transition
+		&:hover
+			color: #fff
+
+.radio-cat
+	text-align: right
+	margin-top: 15px
+	margin-right: -30px
+	font-family: 'RobotoLight', sans-serif
+	font-size: 12px
+	&__label
+		margin-left: 20px
+	&__input
+		display: none
+		&:checked + .style-radio:after
+			display: block
+
+
+.style-radio
+	position: relative
+	display: inline-block
+	vertical-align: middle
+	width: 22px
+	height: 22px
+	margin-right: 5px
+	border-radius: 10em
+	transform: translateY(-2px)
+	&_marketing
+		background-color: $marketing
+	&_effect
+		background-color: $effect
+	&_books
+		background-color: $books
+	&:after
+		position: absolute
+		content: ''
+		display: none
+		width: 11px
+		height: 11px
+		background-color: #fff
+		border-radius: 10em
+		left: 50%
+		top: 50%
+		transform: translate(-50%, -50%)
+
 
 
 //ALWAYS END
 @import media
-
-//Load Libs SASS
-@import app/libs/animate/animate.sass
