--- a/sass/fonts.sass
+++ b/sass/fonts.sass
@@ -3,4 +3,5 @@
 +font-face("RobotoRegular", "../fonts/RobotoRegular/RobotoRegular", $file-formats: eot woff ttf)
 +font-face("RobotoMedium", "../fonts/RobotoMedium/RobotoMedium", $file-formats: eot ttf)
 +font-face("RobotoLight", "../fonts/RobotoLight/RobotoLight", $file-formats: eot woff ttf)
++font-face("RobotoLight", "../fonts/RobotoCondensed/RobotoCondensed", $file-formats: eot woff ttf)
 +font-face("icon", "../fonts/icon/font/icon", $file-formats: eot woff woff2 ttf svg)
