--- a/app/css/fonts.css
+++ b/app/css/fonts.css
@@ -17,6 +17,12 @@
   src: url("../fonts/RobotoLight/RobotoLight.eot?#iefix") format("embedded-opentype"), url("../fonts/RobotoLight/RobotoLight.woff") format("woff"), url("../fonts/RobotoLight/RobotoLight.ttf") format("truetype"); }
 
 @font-face {
+  font-family: "RobotoLight";
+  font-style: normal;
+  font-weight: normal;
+  src: url("../fonts/RobotoCondensed/RobotoCondensed.eot?#iefix") format("embedded-opentype"), url("../fonts/RobotoCondensed/RobotoCondensed.woff") format("woff"), url("../fonts/RobotoCondensed/RobotoCondensed.ttf") format("truetype"); }
+
+@font-face {
   font-family: "icon";
   font-style: normal;
   font-weight: normal;
