--- a/sass/header.sass
+++ b/sass/header.sass
@@ -17,8 +17,26 @@ a
 	+hover-effect(#333,none)
 img
 	max-width: 100%
-.hidden
+
+h1,h2,h3,h4,
+.h1,.h2,.h3,.h4
+	font-weight: normal
+
+h1,.h1
+	font-family: 'RobotoCondensed', sans-serif
+	font-size: 3.44444em
+	line-height: .7em
+	margin: 0
+	span
+		display: block
+		font-family: 'RobotoMedium', sans-serif
+		font-size: 23px
+		padding-left: 3px
+
+// Search panel
+.search-wrapp
 	display: none
+	background-color: #333
 
 // Header
 .main-header
@@ -115,5 +133,53 @@ img
 		z-index: -1
 	.fa
 		font-size: 25px
+
+.blog-header
+	padding: 120px 0
+	.h1
+		margin: -10px 0 40px
+
+// Author photo
+.brand-logo
+	width: 338px
+	height: 338px
+	border-radius: 50%
+	position: relative
+	cursor: default
+	perspective: 900px
+	&__item
+		display: block
+		position: absolute
+		width: 100%
+		height: 100%
+		border-radius: 50%
+		background-position: center center
+		transition: all 0.4s linear
+		transform-origin: 50% 0%
+		&_front
+			background-image: url(../img/brand_logo.svg)
+		&_back
+			transform: translate3d(0, 0, -220px) rotate3d(1, 0, 0, 90deg)
+			background-image: url(../img/author.jpg)
+			opacity: 0
+
+.brand-logo__info
+	position: absolute
+	width: 100%
+	height: 100%
+	transform-style: preserve-3d
+
+.brand-logo:hover
+	.brand-logo__item_front
+		transform: translate3d(0, 280px, 0) rotate3d(1, 0, 0, -90deg)
+		opacity: 0
+	.brand-logo__item_back
+		transform: rotate3d(1, 0, 0, 0deg)
+		opacity: 1
+
+.header-descr
+	font-family: 'RobotoLight', sans-serif
+	font-size: 1.05em
+	padding-right: 20%
 
 
